tests/behavior/error/optional_get_value_ref3.bz
function main()
{
	let f: ?function() -> void = null;

	__builtin_optional_get_value_ref(f);
}
